<resources>
    <string name="app_name">TaskeRGB</string>
    <string name="formatted_time">Formatted Time</string>
    <string name="formatted_time_description">The time this action was created formatted with your chosen format</string>
    <string name="format">Format</string>
    <string name="help">Help</string>
    <string name="times">Times</string>
    <string name="test">Test</string>
    <string name="variable">Variable</string>
    <string name="min_api_example">Min Api Example</string>
    <string name="min_api_example_description">This variable will only show up for API levels 27 and above</string>
    <string name="time_created_epoch">Time Created Since Epoch</string>
    <string name="separator">Separator</string>
    <string name="options">Options</string>
    <string name="split">Split</string>
    <string name="ip">Your IP</string>
    <string name="ip_description">Your public IP at the time of execution</string>
    <string name="splitip">Split IP</string>
    <string name="splitip_description">Your IP but split in parts</string>
    <string name="time">Current Epoch Time</string>
    <string name="time_description">Number of milliseconds since epoch</string>
    <string name="hours">Hours</string>
    <string name="hours_description">Current Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="minutes_description">Current Minutes</string>
    <string name="seconds_description">Current Seconds</string>
    <string name="get_seconds">Get Seconds</string>
    <string name="playing_label">Playing State</string>
    <string name="playing_html_label">Whether the player is playing right now or not</string>


    <!-- General Help  -->
    <string name="helpVarsInTest">Tasker variables &lt;b&gt;are&lt;/b&gt; supported when the task
        &lt;i&gt;runs&lt;/i&gt;, but unfortunately they &lt;b&gt;aren\'t&lt;/b&gt; supported here in
        &lt;i&gt;test mode&lt;/i&gt;. This is a Tasker limitation. &lt;br&gt;&lt;br&gt; Please make sure
        all values have been supplied and no variables are in use, then try running the test again.</string>


    <!-- RGBW Configuration Labels -->

    <string name="deviceInfoLabel">Device</string>
    <string name="deviceInfoDescription">The device to control.</string>

    <string name="deviceAddressLabel">Address</string>
    <string name="deviceAddressDescription">The address of the device.</string>

    <string name="deviceNameLabel">Name</string>
    <string name="deviceNameDescription">A name for the device.</string>

    <string name="rgbLabel">RGB</string>
    <string name="rgbDescription">The RGB component of the RGBW value (as a color).</string>

    <string name="redLabel">Red</string>
    <string name="redDescription">The Red component of the RGBW value.</string>

    <string name="greenLabel">Green</string>
    <string name="greenDescription">The Green component of the RGBW value.</string>

    <string name="blueLabel">Blue</string>
    <string name="blueDescription">The Blue component of the RGBW value.</string>

    <string name="whiteLabel">White</string>
    <string name="whiteDescription">The white component of the RGBW value (as a number between 0 and 255).</string>

    <string name="targetLabel">Type</string>
    <string name="targetDescription">0 to update an individual device or 1 to update a group of devices.</string>

    <string name="targetNameLabel">Name</string>
    <string name="targetNameDescription">The name of the device or group to update.</string>

    <string name="valueLabel">Value</string>
    <string name="valueDescription">The RGBW value that should be set.</string>


    <!-- Palette Entries  -->
    <string name="entryNameLabel">Name</string>
    <string name="entryNameDescription">The name of the palette entry.</string>

    <string name="entryColorLabel">Color</string>
    <string name="entryColorDescription">The color of the palette entry.</string>


    <!-- Palette Inputs  -->
    <string name="imagePathLabel">Image Path</string>
    <string name="imagePathDescription">Path of the image to load. Can be local file or Url.</string>

    <string name="maxColorsLabel">Max Colors</string>
    <string name="maxColorsDescription">Maximum number of colors to generate in the palette. Higher numbers take longer but increase the chances of finding target colors and variants.</string>

    <string name="defaultColorLabel">Default Color</string>
    <string name="defaultColorDescription">Default to use when a color is missing from a palette.</string>


    <!-- Palette Targets  -->
    <string name="darkMutedLabel">Dark Muted</string>
    <string name="darkMutedDescription">A muted color which is dark in luminance.</string>

    <string name="darkVibrantLabel">Dark Vibrant</string>
    <string name="darkVibrantDescription">A vibrant color which is dark in luminance.</string>

    <string name="dominantLabel">Dominant</string>
    <string name="dominantDescription">A color which shows up most frequently.</string>

    <string name="lightMutedLabel">Light Muted</string>
    <string name="lightMutedDescription">A muted color which is light in luminance.</string>

    <string name="lightVibrantLabel">Light Vibrant</string>
    <string name="lightVibrantDescription">A vibrant color which is light in luminance.</string>

    <string name="mutedLabel">Muted</string>
    <string name="mutedDescription">A muted color which is neither light or dark.</string>

    <string name="vibrantLabel">Vibrant</string>
    <string name="vibrantDescription">A vibrant color which is neither light or dark.</string>

    <string name="brightLabel">Bright</string>
    <string name="brightDescription">A bright, mostly saturated color.</string>

    <string name="allColorsLabel">All Colors</string>
    <string name="allColorsDescription">An array of all colors in the palette.</string>

    <!-- RGBW Error Messages -->
    <string name="rgbwErrConfig">Configuration error.</string>
    <string name="rgbwErrDeviceUnavailable">RGBW device was unavailable.</string>

    <!-- BLE Error Messages -->
    <string name="location_permission_disabled">Location permission has been disabled.</string>
    <string name="location_permission_not_granted">Location permission wasn\'t granted.</string>

    <!-- Common Words -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>


    <string name="artist">artist</string>
    <string name="artist_label">Artist</string>
    <string name="artist_html_label">Artist for the current song</string>

    <string name="song">song</string>
    <string name="song_label">Song</string>
    <string name="song_html_label">Name of the song </string>

    <string name="duration">duration</string>
    <string name="duration_label">Duration</string>
    <string name="duration_html_label">Duration in seconds</string>

    <string name="songs">songs</string>
    <string name="songs_label">Songs</string>
    <string name="songs_html_label">Name of songs this artist has</string>

    <string name="album">album</string>
    <string name="album_label">Album</string>
    <string name="album_html_label">Best album for this artist</string>
    <string name="play_mode">Play Mode</string>
    <string name="playing">Playing</string>
    <string name="stopped_paused">Stopped/Paused</string>


    <string name="title_activity_device_control">DeviceControlActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TaskeRGB</string>
    <string name="nav_header_subtitle">Device Control</string>
    <string name="nav_header_desc">Navigation</string>
    <string name="action_settings">Settings</string>

    <string name="menu_control">Control</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_groups">Groups</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_devices_second">Hello Devices Second Fragment. Arg: %1$s</string>
    <string name="hello_groups_second">Hello Groups Second Fragment. Arg: %1$s</string>
    <string name="color_label">Color</string>
    <string name="color_hint">Tap info above or eyedropper to select.</string>
    <string name="ellipsis">...</string>
    <string name="info_button_description">Information button to provide additional details.</string>
    <string name="picker_button_description">A picker button which allows a value to be selected.</string>
    <string name="color_picker_title">Select a color</string>
    <string name="file_path_hint">Variable, url or local file path</string>
    <string name="loaded_image_description">The loaded image</string>
</resources>
