<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/colorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/color_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colorHelpButton" />

    <EditText
        android:id="@+id/editColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/color_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/colorPickButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorLabel"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/colorHelpButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/info_button_description"
        app:layout_constraintStart_toEndOf="@+id/colorLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/colorPickButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/picker_button_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editColor"
        tools:srcCompat="@drawable/ic_color_picker_24" />

</androidx.constraintlayout.widget.ConstraintLayout>